# spec

./: .gitignore  .ruff.toml  PROOF_PATHS.md  README.md  SPEC.md  STRUCTURE.md  VRL_MASTER_PLAN.md  orchestrator.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  QUICKSTART.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  circuit_submission.yml
.github/scripts/: validate_bundles.py  validate_registry.py
.github/workflows/: ci.yml  pages.yml  publish.yml
agents/: __init__.py  base.py  zk_unit.py
api/: main.py  routes.py  runtime.py
app/: main.py
app/db/: connection.py  repository.py
app/services/: evidence_service.py  training_service.py
backend/: __init__.py  proof_export.py  proof_queue.py  trace_adapter.py  verified_dataset.py  zk_pipeline.py
coordinator/: __init__.py  artifact_graph.py  performance.py  system.py
core/: audit_chain.py  chain_checkpoint.py  chain_metrics.py  engine.py  proof.py  sample.py  tariffs.py  verifier.py  zk_interface.py
docs/: AUDIT_REMEDIATION_CHECKLIST.md  INTEGRATION_WORKSPACE.md  OPEN_SOURCE_BOUNDARY.md  REPO_SPLIT_PLAN.md  TLS_SETUP.md  TRUST_MODEL.md  VERIFIED_DATASET_FORMAT.md  determinism-report.md  index.html  postgresql-forensics-report.md  registry.html  security-audit.md  spec.html  verify.html
docs/assets/: style.css  vrl.js
docs/live-validation/: audit-chain-verification-report.json  summary.json  (+8 more)
infra/: __init__.py  environment.py
memory/: circuit_memory.json  performance_memory.json  shared_memory.py  strategy_memory.json  vulnerability_memory.json
migrations/: 001_init.sql  002_chain_partitioning.sql  003_verified_proof_bundle.sql
models/: schemas.py  verified_dataset.py
proposals/: repo_split_manifest.json  repo_visibility_manifest.json
registry/: README.md  SUBMISSION.md  registry.json
scripts/: check_environment.py  export_repo_split.ps1  export_repo_split.py  live_validate.py  smoke_e2e.py  validate_latency.py  verify.py  verify_audit_chain.py  verify_proof.py
sdk/python/: IMPLEMENTATION_NOTES.md  PUBLISHING.md  README.md  pyproject.toml  setup.py
sdk/python/examples/: build_and_verify.py
sdk/python/tests/: __init__.py  test_bundle.py  test_verifier.py
sdk/python/vrl/: __init__.py  builder.py  bundle.py  hashing.py  identity.py  verifier.py
security/: api_keys.py  audit_log.py  backpressure.py  guards.py  rate_limit.py
tests/: fakes.py  reference_vector.json  test_activation.py  test_agent_unit.py  test_api_smoke.py  test_append_only_and_rollback.py  test_artifact_graph.py  test_audit_chain.py  test_boundaries.py  test_concurrency.py  test_db_persistence.py  test_db_verification.py  test_determinism.py  test_hardening.py  test_hashing.py  test_hypothesis.py  test_invalid_inputs.py  test_memory_control.py  test_plonk_prover.py  test_production_guardrails.py  test_replay_protection.py  test_reproducibility.py  test_verified_dataset_export.py  test_verifier.py
ui/: index.html
utils/: canonical.py  decimal.py  hashing.py  time.py
verifier/: README.md  vrl_verify.py
zk/: __init__.py  architecture.py  field_utils.py  interfaces.py  rust_bridge.py
(+74 files in other folders)
