[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vrl-sdk"
version = "0.1.0"
description = "Python SDK for the VRL Proof Bundle Specification — cryptographically verifiable AI outputs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "VRL Protocol Contributors", email = "hello@vrl-protocol.dev"}]
keywords = ["vrl", "zero-knowledge", "zkp", "ai-verification", "proof-bundle", "cryptography", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://vrl-protocol.github.io/spec"
Repository = "https://github.com/vrl-protocol/spec"
Documentation = "https://github.com/vrl-protocol/spec/tree/main/sdk/python"
"Bug Tracker" = "https://github.com/vrl-protocol/spec/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vrl*"]
